# rag-from-scratch

./: .env.example  README.md  main.py  pyproject.toml
data/: rossum.md
src/: __init__.py  chunker.py  embedder.py  generator.py  pipeline.py  utils.py  vectorstore.py
tests/integration/: test_pipeeline_integration.py
tests/unit/: test_chunker.py  test_embedder.py  test_vectorstore.py
